# BlackBoardAI

./: .gitignore  Dockerfile  README.md  YouTube Thumbnail  add_audio.py  ai.py  api_test.py  clone_voice.py  code_writer.py  common.py  debug_prompt.py  delete_file.py  description.txt  dialogue.txt  dialogue_prompt.py  dialogue_writer.py  docker-compose.yml  exceptions.py  image_to_video.py  insta_uploader.py  main.py  manim_prompt.py  manim_run.py  manim_writer.py  openAIapi.py  prompt.py  pyproject.toml  regenerate_controls.py  requirements.txt  requirements_backup.txt  screen_writer.py  speech.py  start.py  svg.py  svg_prompt.py  svg_video.py  svgtopng.py  t.py  t2.py  test.py  (+8 more)
debug/: combine_audio.py  merge.py
debug/backup/: v1.py  v2.py  v3.py  v4.py  video_editor.py
deploy/development/: main.py
development/: Dockerfile  docker-compose.yml
gugu/: .env  main.py  run_job.py  upload_script.py
media/Tex/: 018ab0ed65867883.tex  050cc489c46e33ff.tex  0f6ce07f1614237c.tex  104882923c0c514a.tex  12d1cf5a9d4973bd.tex  1b2904b69021c928.tex  21bcdbdc4a0df22b.tex  27e77e4db6978961.tex  2b3fc8fc37ceb3c6.tex  2baf38b62309a3f7.tex  2d7a1ade4312a3cc.tex  30f372c71c7ae746.tex  3121fc4c0a0a7ea0.tex  3237e5524a71741b.tex  3990d5852d39575b.tex  3b9b1c81ef4de567.tex  3fad70036df2938e.tex  44c8a822f34d4399.tex  4c83c9fc9191201e.tex  4d3039f167508253.tex  4dd28271a25d5c29.tex  4edc296848a524fc.tex  4f8686b4fe323d55.tex  50ca729c72d6b53f.tex  54b02e85db0e3bec.tex  (+54 more)
production/: Dockerfile  docker-compose.yml
video-generation-html/: index.html  main.py  v2.py
(+333 files in other folders)
