[project]
name = "blackboardai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cairosvg>=2.8.2",
    "ffmpeg-python>=0.2.0",
    "google-genai>=1.27.0",
    "ipython>=8.37.0",
    "kokoro>=0.9.4",
    "manim>=0.19.0",
    "moviepy==1.0.3",
    "python-dotenv>=1.1.1",
    "soundfile>=0.13.1",
]
